--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-  <header class="main-header">
+  <!-- <header class="main-header">
     <section class="main-panel">
       <div class="container"> 
         <a class="head-logo" href="#"><img src="img/logo.svg" alt="Логотип магазина Техномарт"></a>
@@ -29,7 +29,7 @@
         </p>
         <div>
           <a class="cont-number" href="tel:+7(812)555-05-55">+7 (812) 555-05-55</a>
-          <p class="adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          <p class="adress h-color">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         </div>
         <div>
           <div class="authorization-registration-disable">
@@ -44,6 +44,68 @@
               <a class="user-panel-logout" href="blank.html" aria-label="Кнопка дефвторизации">
               </a>
             </div>
+            <div class="wrapper-account-panel">
+              <a class="my-orders h-color" href="blank.html">Мои заказы</a>
+              <a class="personal-area h-color" href="blank.html">Личный кабинет</a>
+            </div>
+          </div>
+        </div> 
+      </div>
+    </div>
+    <section class="main-nav">
+      <h2 class="visually-hidden">Главная навигация по страницам сайта</h2>
+      <nav class="nav-menu">
+        <ul class="ul-style">
+          <li><a href="index.html">Главная</a></li>
+          <li><a href="blank.html">Компания</a></li>
+          <li><a href="catalog.html">Каталог</a></li>
+          <li><a href="blank.html">Новости</a></li>
+          <li><a href="blank.html">Спецпредложения</a></li>
+          <li><a href="blank.html">Доставка</a></li>
+          <li><a href="blank.html">Контакты</a></li>
+        </ul>
+      </nav>
+    </section>
+  </header> -->
+  <header class="main-header">
+    <section class="main-panel">
+      <div class="container wrap-logo"> 
+        <a class="head-logo" href="#"><img src="img/logo.svg" width="108px" alt="Логотип магазина Техномарт"></a>
+        <h2 class="visually-hidden">Панель пользователя</h2>
+        <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
+          <label  class="search-field" for="search" id="search">
+            <input class="input-background" type="search" name="search" id="search" aria-labelledby="search" value="Поиск:">
+          </label>
+        </form>
+        <a class="user-bookmarks" href="blank.html">Закладки</a>
+        <a class="user-store-basket" href="blank.html">Корзина</a>
+        <a class="checkout-main-panel" href="#">Оформить заказ</a>
+      </div>  
+    </section>
+    <div class="main-panel-authorization">
+      <div class="container">
+        <p class="store-description">Интернет-магазин строительных 
+          материалов <br>и инструментов для ремонта
+        </p>
+        <div class="contact-block">
+          <div class="wrap-cont-number">
+             <a class="cont-number" href="tel:+7(812)555-05-55">+7 (812) 555-05-55</a>
+          </div>
+          <p class="adress h-color">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        </div>
+        <div>
+          <div class="authorization-registration-active">
+            <button class="log-in" type="button">Войти</button>
+            <button class="registration" type="button">Регистрация</button>
+          </div>
+          <div class="account-info">
+            <a class="user-panel" href="blank.html">
+              <img src="img/icon_user.png" alt="Иконка-кнопка личного кабинета пользователя">
+              Равшан Джамшутович
+            </a>
+            <a class="user-panel" href="blank.html">
+              <img src="img/icon_logout.png" alt="Иконка-кнопка для выхода из личного кабинета">
+            </a>
             <div class="wrapper-account-panel">
               <a class="my-orders" href="blank.html">Мои заказы</a>
               <a class="personal-area" href="blank.html">Личный кабинет</a>
@@ -69,7 +131,7 @@
   </header>
   <main>
     <div class="container">
-      <h1>Перфораторы</h1>
+      <h1 class="sections-headline h-color">Перфораторы</h1>
       <section class="bread-crumbs">
       <h2 class="visually-hidden">Меню "хлебные крошки"</h2>
       <ul class="ul-style list-link-crumbs">
@@ -82,19 +144,27 @@
         <section class="filter">
           <h2>Фильтр:</h2>
             <form action="https://echo.htmlacademy.ru/" method="post">
-              <fieldset>
+              <fieldset class="fieldset-wrap">
                 <legend>Цена</legend>
-                <label>
-                  <p class="visually-hidden">От:</p>
-                  <input class="price-min input-background" type="text" name="price_min" aria-label="Цена минимальная" value="0"></input> <!--цена мин-->
-                </label>
-                <label >
-                  <p class="visually-hidden">До:</p> 
-                  <input class="price-max input-background" type="text" name="price_max" aria-label="Цена максимальная" value="3000"></input>   <!--цена макс-->
-                </label>
-                <div></div> <!--Ползунок цены-->
+                <div class="wrap-price">
+                  <input class="price-min input-background" type="text" name="price_min" aria-label="Цена минимальная" value="0">
+                  </input>
+                  <input class="price-max input-background" type="text" name="price_max" aria-label="Цена максимальная" value="30000">
+                  </input>
+                </div>
+                <div class="range-wrap">
+                  <div class="range-controls">
+                    <div class="scale">
+                      <div class="bar"></div>
+                    </div>
+                    <button type="button" class="range-toggle range-toggle-min" aria-label="Ползунок минимальной цены">
+                    </button>
+                    <button type="button" class="range-toggle range-toggle-max" aria-label="Ползунок максимальной цены">
+                    </button>
+                  </div>
+                </div>
               </fieldset>
-              <fieldset>
+              <fieldset class="fieldset-wrap">
                 <legend>Производители:</legend>
                 <ul class="ul-style list-manufacturers">
                   <li>
@@ -119,7 +189,7 @@
                   </li>
                 </ul>
               </fieldset>
-              <fieldset>
+              <fieldset class="fieldset-wrap">
                 <legend>Питание:</legend>
                 <ul class="ul-style list-manufacturers">
                   <li>
@@ -155,8 +225,8 @@
           <h2 class="visually-hidden">Карточки товаров</h2>
             <article>
               <h3>Перфоратор <span>Bosch bfg 6000</span> </h3>
-              <img src="img\bosch_6000.jpg" alt="фото инструмента">
-              <div>
+              <img src="img\bosch_6000.jpg" width="144px" alt="фото инструмента">
+              <div class="buy-popup">
                 <button class="button-buy">Купить</button>
                 <button class="to-bookmarks">В закладки</button>
               </div>
@@ -165,8 +235,8 @@
             </article>
             <article>
               <h3>Перфоратор <span>Bosch bfg 6000</span> </h3>
-              <img src="img\bosch_6000.jpg" alt="фото инструмента">
-              <div>
+              <img src="img\bosch_6000.jpg" width="144px" alt="фото инструмента">
+              <div class="buy-popup">
                 <button class="button-buy">Купить</button>
                 <button class="to-bookmarks">В закладки</button>
               </div>
@@ -175,8 +245,8 @@
             </article>
             <article>
               <h3>Перфоратор <span>Bosch bfg 6000</span> </h3>
-              <img src="img\bosch_6000.jpg" alt="фото инструмента">
-              <div>
+              <img src="img\bosch_6000.jpg" width="144px" alt="фото инструмента">
+              <div class="buy-popup">
                 <button class="button-buy">Купить</button>
                 <button class="to-bookmarks">В закладки</button>
               </div>
@@ -185,8 +255,8 @@
             </article>
             <article>
               <h3>Перфоратор <span>Bosch bfg 3000</span> </h3>
-              <img src="img\bosch_3000.jpg" alt="фото инструмента">
-              <div>
+              <img src="img\bosch_3000.jpg" width="127px" alt="фото инструмента">
+              <div class="buy-popup">
                 <button class="button-buy">Купить</button>
                 <button class="to-bookmarks">В закладки</button>
               </div>
@@ -195,8 +265,8 @@
             </article>
             <article>
               <h3>Перфоратор <span>Bosch bfg 6000</span> </h3>
-              <img src="img\bosch_6000.jpg" alt="фото инструмента">
-              <div>
+              <img src="img\bosch_6000.jpg" width="144px" alt="фото инструмента">
+              <div class="buy-popup">
                 <button class="button-buy">Купить</button>
                 <button class="to-bookmarks">В закладки</button>
               </div>
@@ -205,8 +275,8 @@
             </article>
             <article>
               <h3>Перфоратор <span>Bosch bfg 2000</span> </h3>
-              <img src="img\bosch_2000.jpg" alt="фото инструмента">
-              <div>
+              <img src="img\bosch_2000.jpg" width="127px" alt="фото инструмента">
+              <div class="buy-popup">
                 <button class="button-buy">Купить</button>
                 <button class="to-bookmarks">В закладки</button>
               </div>
@@ -215,8 +285,8 @@
             </article>
             <article>
               <h3>Перфоратор <span>Bosch bfg 3000</span> </h3>
-              <img src="img\bosch_3000.jpg" alt="фото инструмента">
-              <div>
+              <img src="img\bosch_3000.jpg" width="127px" alt="фото инструмента">
+              <div class="buy-popup">
                 <button class="button-buy">Купить</button>
                 <button class="to-bookmarks">В закладки</button>
               </div>
@@ -225,8 +295,8 @@
             </article>
             <article>
               <h3>Перфоратор <span>Bosch bfg 6000</span> </h3>
-              <img src="img\bosch_6000.jpg" alt="фото инструмента">
-              <div>
+              <img src="img\bosch_6000.jpg" width="144px" alt="фото инструмента">
+              <div class="buy-popup">
                 <button class="button-buy">Купить</button>
                 <button class="to-bookmarks">В закладки</button>
               </div>
@@ -235,8 +305,8 @@
             </article>
             <article>
               <h3>Перфоратор <span>Bosch bfg 2000</span> </h3>
-              <img src="img\bosch_2000.jpg" alt="фото инструмента">
-              <div>
+              <img src="img\bosch_2000.jpg" width="127px" alt="фото инструмента">
+              <div class="buy-popup">
                 <button class="button-buy">Купить</button>
                 <button class="to-bookmarks">В закладки</button>
               </div>
@@ -267,7 +337,7 @@
   <footer class="footer">
     <div class="footer-wrapper-main">
       <div class="wrap-main-nav container">
-        <a href="#" class="logo-footer"><img src="img/logo_footer.svg" alt="Логотип магазина">
+        <a href="#" class="logo-footer"><img src="img/logo_footer.svg" width="136.5px" alt="Логотип магазина">
         </a>
         <section>
           <h2 class="visually-hidden">Навигация по страницам сайта</h2>  
@@ -299,9 +369,9 @@
       <section class="second-footer-section container">
         <p class="copyright-company">© 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
         <ul class="social-icons ul-style">
-          <li><a class="vk-link" href="#">Вконтакте</a></li>
-          <li><a class="fb-link" href="#">Фейсбук</a></li>
-          <li><a class="inst-link" href="#">Инстаграм</a></li>
+          <li><a class="vk-link" href="#" aria-label="Мы в Вконтакте"></a></li>
+          <li><a class="fb-link" href="#" aria-label="Мы в Фейсбук"></a></li>
+          <li><a class="inst-link" href="#" aria-label="Мы в Вконтакте"></a></li>
         </ul>
         <p class="feedback-info">Обратная связь:<br><a href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a></p>
         <p class="developed-by">Разработано —<br><a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
