--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body class="page-body">
     <header class="main-header">
       <section class="main-panel">
-        <div class="container"> 
-          <a class="head-logo" href="#"><img src="img/logo.svg" alt="Логотип магазина Техномарт"></a>
+        <div class="container wrap-logo"> 
+          <a class="head-logo" href="#"><img src="img/logo.svg" width="108px" alt="Логотип магазина Техномарт"></a>
           <h2 class="visually-hidden">Панель пользователя</h2>
           <form class="search-form" action="https://echo.htmlacademy.ru" method="post">
             <label  class="search-field" for="search" id="search">
@@ -27,9 +27,11 @@
           <p class="store-description">Интернет-магазин строительных 
             материалов <br>и инструментов для ремонта
           </p>
-          <div>
-            <a class="cont-number" href="tel:+7(812)555-05-55">+7 (812) 555-05-55</a>
-            <p class="adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          <div class="contact-block">
+            <div class="wrap-cont-number">
+               <a class="cont-number" href="tel:+7(812)555-05-55">+7 (812) 555-05-55</a>
+            </div>
+            <p class="adress h-color">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           </div>
           <div>
             <div class="authorization-registration-active">
@@ -114,14 +116,14 @@
       </section>
       <section class="product-cards container">
         <div class="wrapp-ppular">
-          <h2 class="sections-headline">Популярные товары:</h2>
+          <h2 class="sections-headline h-color">Популярные товары:</h2>
           <a class="all-popular-products" href="catalog.html">Все популярные товары</a>
         </div>
         <div class="wrapp-card">
           <article>
             <h3>Перфоратор Bosch bfg 9000</h3>
-            <img src="img/bosch_9000.jpg" alt="Фото инструмента - Перфоратор Bosch bfg 9000">
-            <div>
+            <img src="img/bosch_9000.jpg" width="184px" alt="Фото инструмента - Перфоратор Bosch bfg 9000">
+            <div class="buy-popup">
               <button class="button-buy">Купить</button>
               <button class="to-bookmarks">В закладки</button>
             </div>
@@ -130,8 +132,8 @@
           </article>
           <article>
             <h3>Перфоратор Bosch bfg 3000</h3>
-            <img src="img\bosch_3000.jpg" alt="Фото инструмента - Перфоратор Bosch bfg 3000">
-            <div>
+            <img src="img\bosch_3000.jpg" width="127px" alt="Фото инструмента - Перфоратор Bosch bfg 3000">
+            <div class="buy-popup">
               <button class="button-buy">Купить</button>
               <button class="to-bookmarks">В закладки</button>
             </div>
@@ -140,8 +142,8 @@
           </article>
           <article>
             <h3>Перфоратор Bosch bfg 6000</h3>
-            <img src="img\bosch_6000.jpg" alt="Фото инструмента - Перфоратор Bosch bfg 6000">
-            <div>
+            <img src="img\bosch_6000.jpg" width="144px" alt="Фото инструмента - Перфоратор Bosch bfg 6000">
+            <div class="buy-popup">
               <button class="button-buy">Купить</button>
               <button class="to-bookmarks">В закладки</button>
             </div>
@@ -150,8 +152,8 @@
           </article>
           <article>
             <h3>Перфоратор Bosch bfg 2000</h3>
-            <img src="img\bosch_2000.jpg" alt="Фото инструмента - Перфоратор Bosch bfg 2000">
-            <div>
+            <img src="img\bosch_2000.jpg" width="127px" alt="Фото инструмента - Перфоратор Bosch bfg 2000">
+            <div class="buy-popup">
               <button class="button-buy">Купить</button>
               <button class="to-bookmarks">В закладки</button>
             </div>
@@ -213,7 +215,7 @@
               <li><p>Кредит</p></li>
             </ul>
             <section class="services-delivery-section">
-              <h3 class="services-delivery">Доставка</h3>
+              <h3 class="services-delivery h-color">Доставка</h3>
               <p class="service-description">
                 Мы с удовольствием доставим ваш товар прямо<br> 
                 к вашему подъезду совершенно бесплатно! <br>
@@ -237,7 +239,7 @@
           <p class="service-description">Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и 
             строительства не оставит равнодушными любителей сэкономить на гастарбайтерах.
           </p> 
-          <p class="service-description">Мы можем доставить ваш товар в самые отдаленные точки России!
+          <p class="service-description">Мы можем доставить ваш товар в самые отдаленные точки России!<br>
             Техномарт работает со многими транспортными компаниями:
           </p>
           <ul class="list-couriers">
@@ -249,7 +251,7 @@
         </section>
         <section class="company-contacts">
           <h2 class="sections-headline">Контакты</h2>
-          <p>Вы можете забрать товар сами, 
+          <p>Вы можете забрать товар сами,<br> 
             заехав в наш офис:
           </p>
           <a href="#"><img src="img\map.jpg" alt="Изображение магазина на карте города"></a>
@@ -260,7 +262,7 @@
     <footer class="footer">
       <div class="footer-wrapper-main">
         <div class="wrap-main-nav container">
-          <a href="#" class="logo-footer"><img src="img/logo_footer.svg" alt="Логотип магазина">
+          <a href="#" class="logo-footer"><img src="img/logo_footer.svg" width="136.5px" alt="Логотип магазина">
           </a>
           <section>
             <h2 class="visually-hidden">Навигация по страницам сайта</h2>  
